# social-network-api

./: Dockerfile  README.md  docker-entrypoint.sh  example.env  pyproject.toml  settings.toml
backend/alembic/: env.py
backend/alembic/versions/: 88d10304ff3f_add_instagram.py  ac81d4e86fa1_init.py  e0a51724e530_add_task_items.py
backend/src/: main.py
backend/src/account/api/: dependencies.py  rest.py
backend/src/account/application/: account_adapter.py
backend/src/account/application/interfaces/: account_profile_repository.py  account_repository.py  account_uow.py
backend/src/account/application/use_cases/: add_account.py  add_account_profile.py  get_account.py  get_account_profiles_list.py  get_accounts_list.py
backend/src/account/domain/: dtos.py  entities.py
backend/src/account/infrastructure/db/: account_profile_repository.py  account_repository.py  account_uow.py  orm.py
backend/src/core/: admin.py  config.py  logging_setup.py
backend/src/db/: engine.py
backend/src/integration/api/: dependencies.py
backend/src/integration/domain/: dtos.py  entities.py  exceptions.py  mappers.py  schemas.py
backend/src/integration/infrastructure/: http_api_client.py  task_runner.py
backend/src/integration/infrastructure/db/: instagram_account_repository.py  orm.py
backend/src/integration/infrastructure/fotobudka/: client.py  schemas.py
backend/src/report/api/: dependencies.py  rest.py
backend/src/report/application/interfaces/: task_adapter.py
backend/src/report/application/use_cases/: make_report.py
backend/src/report/domain/: dtos.py  entities.py
backend/src/task/api/: admin.py  dependencies.py  rest.py
backend/src/task/application/: adapter.py
backend/src/task/domain/: dtos.py  entities.py  mappers.py
backend/src/web/api/: dependencies.py  rest.py  utils.py
backend/src/web/domain/: dtos.py
templates/: add_creator.html  creator.html  index.html
(+36 files in other folders)
